--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,27 +92,27 @@ header .sidebar {
     width: 100%;
   }
 }
-header .sidebar ul {
+header .sidebar .main-navbar {
   margin-top: 5rem;
 }
 @media only screen and (min-width: 1024px) {
-  header .sidebar ul {
+  header .sidebar .main-navbar {
     margin-top: 0;
     position: absolute;
     left: 10rem;
   }
 }
-header .sidebar ul li {
+header .sidebar .main-navbar li {
   color: var(--gray);
   cursor: pointer;
   margin: 1.5rem 0;
   transition: all 0.3s ease-in-out;
 }
-header .sidebar ul li:hover {
+header .sidebar .main-navbar li:hover {
   color: var(--almost-black);
 }
 @media only screen and (min-width: 1024px) {
-  header .sidebar ul li {
+  header .sidebar .main-navbar li {
     margin-top: 0;
     display: inline-block;
     margin-left: 1.5rem;
@@ -162,6 +162,45 @@ header .sidebar .login-section .register-btn {
 }
 header .sidebar .login-section .register-btn:hover {
   border: solid 2px var(--almost-black);
+  color: var(--almost-black);
+}
+
+.dd-menu {
+  position: relative;
+}
+.dd-menu:focus .dd-menu-item, .dd-menu:hover .dd-menu-item {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.dd-menu-item {
+  opacity: 0;
+  transition: opacity linear 0.3s;
+  background-color: white;
+  z-index: 150;
+  position: absolute;
+  top: 1rem;
+  left: 0;
+  pointer-events: none;
+  border-radius: 1rem;
+  box-shadow: 2px 2px 2px rgb(151, 151, 151);
+  margin-top: 0;
+  width: 100%;
+}
+@media only screen and (min-width: 1024px) {
+  .dd-menu-item {
+    padding: 0.5rem;
+    width: 180px;
+    top: 5rem;
+  }
+}
+.dd-menu-item li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+}
+.dd-menu-item li:hover, .dd-menu-item li:focus {
   color: var(--almost-black);
 }
 
